# toxicscript-haskell

./: .gitignore  CHANGELOG.md  ToxicScript.cabal  doc.txt
app/: Main.hs
src/Language/: ToxicScript.hs
src/Language/ToxicScript/: Combination.hs  Env.hs  Eval.hs  Expr.hs  Parse.hs  Stdlib.hs
test/: currying.txc  laziness.txc  list.txc  map.txc  recursion.txc  sandbox.txc  scoping.txc  stdlib.txc
